video-wrapper: add padding to avoid overlap

--- a/css/vendor.css
+++ b/css/vendor.css
@@ -856,8 +856,9 @@ body.chocolat-open>.chocolat-image-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70vh;
-    
+    height: 100%;
+    padding-top: 85px;
+    padding-bottom: 10px;
   }
 
   @media (max-width: 768px) {
